--- a/templates/holders.html
+++ b/templates/holders.html
@@ -4,7 +4,56 @@
 {% block content %}
 
 <div>
-	<h2>New content</h2>
+	<h2 class="fs-5 fw-bold">Major holders</h2>
+	<p class="font-small fw-bold">
+		Breakdown <span class="fw-light">(Currency in USD)</span>
+	</p>
+
+	<div class="row align-items-start mt-4">
+		<div class="col-8">
+			<table class="table table-font">
+				<tbody>
+					{% for item in major%}
+					<tr>
+						<td class="fw-bold">{{ item.share }}</td>
+						<td>{{ item.holder }}</td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</div>
+
+	<h2 class="fs-5 fw-bold mt-4">Top Institutional Holders</h2>
+
+	<div class="row align-items-start mt-4">
+		<div class="col-8">
+			<table class="table table-font">
+				<thead>
+					<tr>
+						<th scope="col" class="table-heading">Holder</th>
+						<th scope="col" class="table-heading text-end">Shares</th>
+						<th scope="col" class="table-heading text-end">Date Reported</th>
+						<th scope="col" class="table-heading text-end">% Out</th>
+						<th scope="col" class="table-heading text-end">Value</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for item in inst %}
+					<tr>
+						<td>{{ item.holder }}</td>
+						<td class="text-end">{{ item.share }}</td>
+						<td class="text-end">{{ item.date }}</td>
+						<td class="text-end">
+							{{ "%.2f"|format(item.outPercent * 100) }}%
+						</td>
+						<td class="text-end">{{ item.value }}</td>
+					</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</div>
 </div>
 
 <!-- prettier-ignore -->
