--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
 </div>
 <div class="flex-nav">
 	<div class="nav-item" id="summary">
-		<a href="/">Summary</a>
+		<a href="/?symbol={{data.symbol}}">Summary</a>
 	</div>
 	<div class="nav-item" id="holders">
 		<a href="/holders?symbol={{data.symbol.lower()}}">Holders</a>
