--- a/templates/profile.html
+++ b/templates/profile.html
@@ -31,9 +31,7 @@
 					</p>
 					<p class="font-small profile-info">
 						Fulltime Employees:
-						<span class="fw-bold"
-							>{{ '{:,}'.format(info.fullTimeEmployees) }}</span
-						>
+						<span class="fw-bold">{{ info.fullTimeEmployees }}</span>
 					</p>
 				</div>
 			</div>
