--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,11 +3,11 @@
 <!-- prettier-ignore -->
 {% block content %}
 
-<div>
+<div class="col-8 mx-auto">
 	<h2 class="fs-5 fw-bold">{{ info.name }}</h2>
 
 	<div class="row align-items-start mt-4">
-		<div class="col-8">
+		<div class="col">
 			<div class="row">
 				<div class="col">
 					<p class="font-small profile-info">{{ info.address }}</p>
