--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
 			<p id="current" class="fs-5">
 				(<span id="current-percent"
 					>{{ "%.2f"|format((1 - (data.regularMarketPreviousClose /
-					data.regularMarketPrice)) * 100) }}</span
+				data.regularMarketPrice)) * 100) }}</span>
 				>%)
 			</p>
 		</div>
